@@ -182,7 +182,7 @@ class tx_templavoila_dbnewcontentel {
 			$this->content.=$this->doc->spacer(5);
 
 			$elRow = t3lib_BEfunc::getRecordWSOL('pages',$this->id);
-			$header= t3lib_iconWorks::getIconImage('pages',$elRow,$BACK_PATH,' title="'.htmlspecialchars(t3lib_BEfunc::getRecordIconAltText($elRow,'pages')).'" align="top"');
+			$header= tx_templavoila_icons::getIconForRecord('pages', $elRow);
 			$header.= t3lib_BEfunc::getRecordTitle('pages',$elRow,1);
 			$this->content.=$this->doc->section('',$header,0,1);
 			$this->content.=$this->doc->spacer(10);
@@ -320,7 +320,7 @@ class tx_templavoila_dbnewcontentel {
 
 			// Back
 		if ($this->returnUrl) {
-			$backIcon = tx_templavoila_icons('actions-view-go-back');
+			$backIcon = tx_templavoila_icons::getIcon('actions-view-go-back');
 			$buttons['back'] = '<a href="' . htmlspecialchars(t3lib_div::linkThisUrl($this->returnUrl)) . '" class="typo3-goBack" title="' . $GLOBALS['LANG']->sL('LLL:EXT:lang/locallang_core.php:labels.goBack', TRUE) . '">' .
 								$backIcon .
 							   '</a>';
